completed tests for today

--- a/basics/operators.html
+++ b/basics/operators.html
@@ -35,14 +35,14 @@ console.log(parsedInt, typeof parsedInt) // -> 11, 'number'
     const runScript = () => {
         const heroesInTsukiji = "7"
         const heroesInShinjuku = "2"
-        document.getElementById("heroes").textContent = heroesInTsukiji + heroesInShinjuku
+        document.getElementById("heroes").textContent = parseInt(heroesInTsukiji) + parseInt(heroesInShinjuku)
     };
 
 </script>
 <script src="test.js"></script>
 
 <div id="displayOnSuccess" hidden="hidden">
-    <a href="./operators2.html">next exercise</a>
+    <a href="./happyday.html">Congratulations - Session 1 is Go</a>
 </div>
 
 <!-- fancy code highlighting -->
